<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SplashActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#FE0000"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/app_log"
                android:src="@drawable/app_logo"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/app_name_splash"
                android:id="@+id/hotel_title_text"
                android:textColor="#ffffff"
                android:textSize="35sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/powered"
                android:textColor="#ffffff"
                android:layout_marginTop="30dp"
                android:id="@+id/hotel_title_sub_text"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/zingo_hotel"
                android:id="@+id/splash_hotel_title"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/lucidia"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
